fix samtools scratch & base pipeline structure

--- a/01_rnaseq/scripts/container/config_name.config
+++ b/01_rnaseq/scripts/container/config_name.config
@@ -2,8 +2,10 @@
 
 # Run parameters
 export wd=""
+export project_folder="${wd}"
 export project_data_folder="${wd}/data/raw"
 export outdir="${wd}/analysis"
+export scriptdir="${project_folder}/scripts" # Folder containing all scripts for the pipeline
 export simul_array_runs=24
 export paired_end="true"
 export projectname=""
@@ -21,7 +23,6 @@ export min_tpm=1
 
 # Set paths
 export resource_dir="/hpc/pmc_vanheesch/shared_resources"
-export scriptdir="${project_data_folder}/scripts/container" # Folder containing all scripts for the pipeline
 export container_dir="/hpc/local/Rocky8/pmc_vanheesch/singularity_images" # Folder containing all of our container versions
 export data_folder="/hpc/pmc_vanheesch/data"  # Data folder containing all of our sequencing data
 
