Add correct lib install dir for customannotation

--- a/01_rnaseq/documentation/container_pilot.config
+++ b/01_rnaseq/documentation/container_pilot.config
@@ -25,6 +25,7 @@ export min_tpm=1
 export resource_dir="/hpc/pmc_vanheesch/shared_resources"
 export container_dir="/hpc/local/Rocky8/pmc_vanheesch/singularity_images"
 export data_folder="/hpc/pmc_vanheesch/data"  # Data folder containing all of our sequencing data
+export package_install_loc="/hpc/local/Rocky8/pmc_vanheesch/Rstudio_Server_Libs/Rstudio_4.1.2_libs"
 
 # Set reference files
 export star_index_basedir="${resource_dir}/GENOMES/${species}.${genome_version}/${annot_version}/STAR/2.7.8a"
